Section "The mathematical diff between all tests": Removing all should go in a review section (keeping only what is mathematically relevant)

--- a/W-test.Rmd
+++ b/W-test.Rmd
@@ -102,7 +102,7 @@ Fourth, more often than not, psychological processes are captured in situations 
 
 # The Mathematical Differences Between the *F*-test, *W*-test, and *F*\*-test
 
-In this section, we will explain the mathematical differences in how the *F*-test, *W*-test and *F*\*-test are computed, with a focus on the way standard deviations are pooled across groups to stress the implications on heteroscedasticity (see appendix for a numerical example).
+In this section, we will explain the mathematical differences in how the *F*-test, *W*-test and *F*\*-test are computed, with a focus on the way standard deviations are pooled across groups to stress the implications on heteroscedasticity (see appendix for a numerical example). We suggest readers to focus their attention on the terms involving the variances.
 
 As shown in \@ref(eq:Fstat) The *F* statistic is calculated by dividing the inter-group variance by a pooled error term, where $s_{j}^2$ and $n_{j}$ are respectively the variance estimates and the sample sizes from each independent group, and where *k* is the number of independent groups: 
 
@@ -123,9 +123,13 @@ df_d= N-k,
 (\#eq:FdenomDF)
 \end{equation} 
 
-With $N=\sum_{j=1}^k n_j$. As a generalization of the Student's *t*-test, the *F*-test is calculated based on a pooled error term, which implies that all samples are estimates of a common population variance. The *F*-test suffers from the same limitations as the Student's *t*-test when sample sizes are unequal between groups, in that the Type I error rate is no longer controlled at the desired level when variances are unequal between groups. When the larger variance is associated with the larger sample size, there is a decrease in the Type I error rate [@Nimon_2012; @Overall_et_al_1995], because the error term increases, and therefore, the *F*-value decreases, leading to fewer significant findings than expected with a specific Type I error level. When the larger variance is associated with the smaller sample size, the Type I error rate is inflated [@Nimon_2012; @Overall_et_al_1995]. This inflation is caused by the under evaluation of the error term, which increases the *F*-value, and thus leads to more significant results than expected, based on the nominal Type I error level. Moreover, when the number of groups increases, the *F*-test becomes increasingly liberal as soon as the variances of the distributions in each group are not similar, even when sample sizes are equal between groups.
+With $N=\sum_{j=1}^k n_j$. As a generalization of the Student's *t*-test, the *F*-test is calculated based on a pooled error term. This implies that all samples are considered as issued from a common population variance (hence the assumption of homoscedasticity). 
 
-To address the problems with error control in the *F*-test when variances are unequal, several authors have proposed alternative approaches to statistical tests on more than two means, which do not rely on the homogeneity of variances assumption [e.g., @Welch_1951]. @Tomarken_and_Serlin_1986 have shown that from the available alternatives, the *F*\*-test and *W*-test are the best choices. Both tests are available in SPSS, which is a widely used software in psychological sciences [@Hoekstra_et_al_2012]. The *F*\* statistic proposed by @Brown_and_Forsythe_1974 is computed as follows:
+When there is heteroscedasticity, if the larger variance is associated with the larger sample size, the error term, denominator in \@ref(eq:Fstat), is overestimated. *F*-value is therefore decreased, leading to fewer significant findings than expected with a specific Type I error level. It explains why the *F*-test is too conservative in this configuration. 
+
+On the other side, when the larger variance is associated with the smaller sample size, the error term, denominator in \@ref(eq:Fstat), is underestimated. *F*-value is therefore inflated, yielding more significant results than expected under the nominal Type I error level.
+
+The *F*\* statistic proposed by @Brown_and_Forsythe_1974 is computed as follows:
 
 \begin{equation} 
 F^*= \frac{\sum_{j=1}^k[n_j(\bar{x_j}-\bar{x_{..}})^2]}{\sum_{j=1}^k [(1-\frac{n_j}{N})s_j^2]}
@@ -134,7 +138,7 @@ F^*= \frac{\sum_{j=1}^k[n_j(\bar{x_j}-\bar{x_{..}})^2]}{\sum_{j=1}^k [(1-\frac{n
 
 Where $x_j$ and $s_j^2$ are respectively the group mean and the group variance, and $\bar{x_{..}}$ is the overall mean. 
 
-As can be seen in \@ref(eq:BFstat) the numerator of the *F*\* statistic is equal to the sum of squares between groups (which is equal to the numerator of the *F* statistic when one compares two groups). In the denominator of the statistic, the variance of each group is weighted by 1 minus the relative frequency of each group, so that the variance associated with the group with the smallest sample size is given more weight. As a result, when the larger variance is associated with the larger sample size, *F*\* is larger than *F*, because the denominator decreases, leading to more significant findings compared with the *F*-test. On the other hand, when the larger variance is associated with the smaller sample size, *F*\* is smaller than *F*, because the denominator increases, leading to fewer significant findings than expected with the *F*-test. The degrees of freedom in the numerator and in the denominator of *F*\*-test are computed as follows:
+As it can be seen in \@ref(eq:BFstat) the numerator of the *F*\* statistic is equal to the sum of squares between groups (which is equal to the numerator of the *F* statistic when one compares two groups). In the denominator, the variance of each group is weighted by 1 minus the relative frequency of each group. This adjustement implies that the variance associated with the group with the smallest sample size is given more weight than in the *F*-test. As a result, when the larger variance is associated with the larger sample size, *F*\* is larger than *F*, because the denominator decreases, leading to more significant findings compared with the *F*-test. On the other hand, when the larger variance is associated with the smaller sample size, *F*\* is smaller than *F*, because the denominator increases, leading to fewer significant findings than expected with the *F*-test. The degrees of freedom in the numerator and in the denominator of *F*\*-test are computed as follows (with the same principle than the denominator computation):
 
 \begin{equation} 
 df_n= k-1
@@ -146,8 +150,8 @@ df_d= \frac{1}{\sum_{j=1}^k[\frac{(\frac{(1-\frac{n_j}{N})s_j^2}{\sum_{j=1}^k[(1
 (\#eq:BFdenomDF)
 \end{equation} 
 
-\@ref(eq:Wstat) provides the *W*-test computation. The squared deviation between group means and the general mean are weighted by $\frac{n_j}{s_j^2}$ instead of $n_j$ in the numerator of the *W*-test [@Brown_and_Forsythe_1974].
-
+\@ref(eq:Wstat) provides the *W*-test computation. In the numerator of the *W*-test, the squared deviation between group means and the general mean are weighted by $\frac{n_j}{s_j^2}$ instead of $n_j$ [@Brown_and_Forsythe_1974].As a consequence, for equal sample sizes, the group with the highest variance will have smaller weight [@Liu_2015]. The demonstration of Welch's theorem is out of the scope of this paper, however, it is interesting to understand the consequences. When the biggest sample size has the biggest variance, as previously mentioned, the *F*-test will be too conservative, the Welch corrects that even better than the *F*\* such as *W* > *F*\* > *F*. Conversely, when the smallest sample size has the biggest variance, the *F*-test will be too liberal, the Welch also corrects the effect even better than the *F*\* such as *W* < *F*\* < *F*.
+ 
 \begin{equation} 
 W=\frac{\frac{1}{k-1}\sum_{j=1}^k[w_j(\bar{X_j}-\bar{X'})^2]}
 {1+\frac{2(k-2)}{k^2-1}\sum_{j=1}^k[(\frac{1}{n_j-1})(1-\frac{w_j}{w})^2]}
@@ -197,7 +201,7 @@ knitr::include_graphics("C:/Users/Administrateur/Documents/GITHUB/W-ANOVA/Rmarkd
 
 Table 2 shows that, concerning the Type I error, in all cases, the *W*-test performs as well as or better than the two alternatives. More specifically, as soon as variances are unequal between groups (categories 1 to 3), the *W*-test stays unaltered whereas the two other tests become unreliable. 
 
-These results can be generalized: when the number of groups increases, the *F*-test becomes increasingly unreliable. The Type I error rate is too low when there is a positive correlation between sample sizes and population standard deviations, but too high when there is either a negative correlation between sample sizes and population standard deviations or unequal variances with equal sample sizes \footnote{To yield a robust test, the Type I error rate has to be sufficiently close to the nominal 5% level. In order to assess the robustness of the three tests in our simulations, we follow Bradley (1978) and consider the Type I error rate as 'close enough' to the nominal 5% if it falls in the interval [0.025; 0.075]}. The *F*\*-test is robust against unequal population variances when there are two groups to compare (Table 2). When there are three groups to compare, the test is less affected by violations of the assumption of equal variances than the *F*-test, but the Type I error rate still increases when there are unequal population variances between groups. Additional simulations, presented in the Supplemental Material, show that the test gets more liberal as the sample sizes are smaller, and as the *SD*-ratio and the number of groups to compare increase. Finally, the *W*-test yields a more stable Type I error rate, regardless of the number of groups that are compared, and regardless of the *SD*-ratio.
+These results can be generalized: when the number of groups increases, the *F*-test becomes increasingly unreliable. The Type I error rate is too low when there is a positive correlation between sample sizes and population standard deviations, but too high when there is either a negative correlation between sample sizes and population standard deviations or unequal variances with equal sample sizes \footnote{To yield a robust test, the Type I error rate has to be sufficiently close to the nominal 5% level. In order to assess the robustness of the three tests in our simulations, we follow Bradley (1978) and consider the Type I error rate as 'close enough' to the nominal 5% if it falls in the interval [0.025; 0.075]}. The *F*\*-test is robust against unequal population variances when there are two groups to compare (Table 2). When there are three groups to compare, the test is less affected by violations of the assumption of equal variances than the *F*-test, but the Type I error rate still increases when there are unequal population variances between groups. Additional simulations, presented in the Supplemental Material, show that the test gets more liberal as the sample sizes are smaller, and as the *SD*-ratio and the number of groups to compare increase. Finally, the *W*-test yields a more stable Type I error rate, regardless of the number of groups that are compared, and regardless of the *SD*-ratio. 
 
 ### Simulating Type I error rates when the normality assumption is not met. 
 We tested the impact of non-normal distributions without heterogeneity of variances on the Type I error rate, based on 560 scenarios (See Table 1). As an illustration, Table 3 contains information about the median Type I error rate and associated *MAD* of categories where we compare two or three groups of different sample sizes, extracted from 1) mixed normal distributions (symmetric with heavy tails distributions), 2) normal right-skewed distributions or 3) chi-squared distributions, when there are 30 subjects in the first group (for more scenarios, see the Supplemental Material). Table 3 shows that across the three categories, the *F*-test provides a better control of the Type I error rate than both *W*-test and *F*\*-test. When there are two groups to compare, the *F*\*-test and *W*-test have the same Type I error rate since, as stated above, both tests are identical. However, when there are three groups to compare, the *W*-test is more conservative than the *F*-test and *F*\*-test with heavy tailed distributions, and more liberal than the *F*-test and *F*\*-test with skewed distributions. Lastly, we underline that, in these scenarios, departures from normality have mild consequences.
