Assumptions realism is now a distinct section from the consequences of assumptions violations + Reorganisation of the normality section, in order to be more consistent with the homosedasticity section.

--- a/W-test.Rmd
+++ b/W-test.Rmd
@@ -72,27 +72,35 @@ render_appendix("Appendix.Rmd")
 
 When comparing independent groups researchers often analyze the means by performing a classical Analysis of Variance (ANOVA) *F*-test [@Erceg-Hurn_Mirosevich_2008]. The *F*-test relies on the assumptions that the data are sampled from a normal distribution, and that the data are sampled from distributions that have equal variances [or homoscedasticity; see @Lix_Keselman_Keselman_1996]. While a deviation from the normality assumption still yields quite robust conclusions when using *F*-test [@Glass_et_al_1972], unequal variances rapidly become problematic [@Grissom_2000]. Yet, researchers rarely provide information about these assumptions when they report an *F*-test. When we examined statistical tests reported in 116 articles in the *Journal of Personality and Social Psychology* published in the year 2016, fourteen percent of these articles reported a One-Way *F*-test, but only one article indicated to take the homogeneity of variances assumption into account by reporting corrected degrees of freedom for unequal variances, that could signal the use of the *W*-test instead of the classical *F*-test. A similar investigation [@Hoekstra_et_al_2012] yielded similar conclusions about the lack of attention to both the homoscedasticity and the normality assumptions. Despite the fact that the *F*-test is currently used by default, alternatives exist that are often a better choice, such as the Welch's *W* ANOVA (*W*-test), the Alexander-Govern test, James second order test and the Brown-Forsythe ANOVA (*F*\*-test). In this paper, we will discuss the pertinence of the assumptions of parametric tests, and provide simulations comparing *F*-test with the most adequate alternatives. As we argue in this article, the *W*-test has nearly the same statistical power than the *F*-test when variances are unequal, but provides better Type 1 error control. Since the *W*-test is available in practically all statistical software packages, researchers can improve their statistical inferences by replacing the *F*-test by the *W*-test.
 
-# Why Should you Think about the Assumptions Underlying Parametric Tests?
+# Normality and Homogeneity of variances in Ecological Conditions
 
-When the assumptions of parametric tests are not met, a bias in Type I ($\alpha$) or Type II ($\beta$) error may occur [@Leys_Schumann_2010; @Lix_Keselman_Keselman_1996]. Type I error is the probability to falsely reject the null hypothesis. Type II error is the probability to falsely accept the null hypothesis. The statistical power (1-$\beta$) of a test is the probability of correctly rejecting the null hypothesis. 
+For several reasons, assumptions of homogeneity of variances and normality are always more or less violated [@Glass_et_al_1972]. In this section we will summarize the specificity of the methods used in our discipline that can account for this situation. 
 
-## Is the Normality Assumption Realistic?
+## Normality Assumption
 
-It has been argued that there are many fields in psychology where the assumption of normality does not hold [@Cain_et_al_2016]. Data can depart from normality either on one or both indicators of skewness (a measure of asymmetry of the shape of the distribution) and kurtosis (a distribution with positive kurtosis will be more peaked and have heavier tails than the normal distribution. while a distribution with negative kurtosis will be flatter and have lighter tails than the normal distribution). According to @Wilcox_2011, in social and behavioral sciences, distributions can be very similar to the normal curve but with thicker tails (such as a mixed-normal distribution). These conclusions are consistent with @Micceri_1989 and @Yuan_et_al_2004 showing departures from normality in various data sets.
+It has been argued that there are many fields in psychology where the assumption of normality does not hold [@Cain_et_al_2016; @Micceri_1989; @Yuan_et_al_2004]. As argued by @Micceri_1989, there are many factors that could explain departures from the normality assumption. @Micceri_1989 identified many factors, and we will focus on three of them: the treatment effects, the presence of subpopulations within the studied one and the bounded measures underlying residuals.
 
-For example, in the field of psychology, when assessing a wellness score for the general population, data may be sampled from a left-skewed distribution, because most people are probably not depressed [see @Heun_et_al_1999]. Some examples can also be found in the field of neurosciences. When studying reaction times, data are often sampled from right-skewed distributions because it is relatively uncommon to observe slow response times [@Cain_et_al_2016; @Palmer_et_al_2011]. In sum, there are many common situations in which normally distributed data is an unlikely assumption.
+First, while it is obvious that the mean can be changed by the treatment effects, experimental treatment could also change the shape of a distribution, either on one or both indicators of skewness, a measure of asymmetry of the shape of the distribution, and kurtosis, a measure of the tendency to produce extreme values \footnote{a distribution with positive kurtosis will have heavier tails than the normal distribution meaning that extreme values will be more likely, while a distribution with negative kurtosis will have lighter tails than the normal distribution meaning that extreme values will be less likely.}[@Wilcox_2005;@Westfall_2014]. For example, @Knapp_and_Dixon_1950 show that practicing juggling during an amount of time can have various effect of juggle learning efficiency between subjects. This could influence the kurtosis of the distribution. 
+ 
+Second, prior any experimental treatments, departures from the normality assumptions may be due to the presence of several subpopulations that present unequal characteristics and that are not controlled within the studied group (resulting in mixed distributions). This unavoidable lack of control is inherent of our field given its complexity. As an illustration, @Wilcox_2005 writes that pooling two normally-distributed populations that have the same mean but different variances (e.g. normally distributed scores for schizophrenic and not schizophrenic participants) could result is distributions that are very similar to the normal curve but with thicker tails. As another example, when assessing a wellness score for the general population, data may be sampled from a left-skewed distribution, because most people are probably not depressed [see @Heun_et_al_1999]. In this case, people suffering from depression and people that do not are included within the same population group, explaining the asymmetry.   
 
-## Is the Homogeneity of Variances Assumption Realistic?
+Third, bounded measure can also explain the non-normal distributions. Such examples can be found in the field of neurosciences such as reaction times, that can be very large but never below zero (resulting in right-skewed distributions; see @Ratcliff_1979 for a discussion on the reaction time distribution shape). In sum, there are many common situations in which normally distributed data is an unlikely assumption.
 
-Equality of variances (or homoscedasticity) is a mathematical demand that is ecologically very unlikely [@Erceg-Hurn_Mirosevich_2008; @Grissom_2000]). In a previous paper [@Delacre_et_al_2017], we identified three different causes of heteroscedasticity: the variability inherent to the use of measured variables, the variability induced by quasi-experimental treatments on measured variables, and the variability induced by different experimental treatments on randomly assigned subjects. One additional source of variability is the presence of unidentified moderators [@Cohen_et_al_2013].
+## Homogeneity of Variances Assumption
+
+Homogeneity of variances (or homoscedasticity) is a mathematical demand that is ecologically very unlikely [@Erceg-Hurn_Mirosevich_2008; @Grissom_2000]). 
+
+In a previous paper [@Delacre_et_al_2017], we identified three different causes of heteroscedasticity: the variability inherent to the use of measured variables, the variability induced by quasi-experimental treatments on measured variables, and the variability induced by different experimental treatments on randomly assigned subjects. One additional source of variability is the presence of unidentified moderators [@Cohen_et_al_2013].
 
 First, psychologists, as many scholars from various fields in human sciences, often use measured variables (e.g. age, gender, educational level, ethnic origin, depression level, etc.) instead of random assignment to conditions. Prior to any treatment, parameters of pre-existing groups can vary largely from one population to another, as suggested by @Henrich_et_al_2010. For example, @Green_et_al_2005 have shown that the scores of competitiveness, self-reliance and interdependence are more variable in some ethnic groups than in others. This stands true for many pre-existing groups such as gender, cultures, or religions and for various outcomes [see for example @Adams_et_al_2014; @Beilmann_et_al_2014; @Church_et_al_2012; @Cohen_and_Hill_2007; @Haar_et_al_2014; @Montoya_Briggs_2013]. Moreover, groups are sometimes defined with the intention to have different variabilities. For example, as soon as a selective school admits its students based on the results of aptitude tests, the variability will be smaller compared to a school that accepts all students. In this example, the goal is not to alter the variability but is an inherent statistical implication of such theoretical positions.
 
 Second, a quasi-experimental treatment can have different impacts on variances between pre-existing groups, that can even be of theoretical interest. For example, in the field of linguistics and social psychology, @Wasserman_and_Weseley_2009 investigated the impact of language gender structure on sexist attitudes of women and men. They tested differences between sexist attitude scores of subjects who read a text in English (i.e. a language without grammatical gender) or in Spanish (i.e. a language with grammatical gender). The results showed that (for a reason not explained by the authors), the women's score on the sexism dimension was more variable when the text was read in Spanish than in English ($SD_{spanish}=.80 > SD_{english}=.50$).For men, the reverse was true ($SD_{spanish}=.97 < SD_{english}=1.33$) \footnote{Note that this example is for didactic reasons, the differences have not been tested and might not differ significantly}  
 
-Third, even when the variances of groups are the same before treatment (due to a complete randomization in the group assignment), unequal variances can emerge later, as a consequence of an experimental treatment [@Bryk_and_Raudenbush_1988;@Cumming_2013; @Erceg-Hurn_Mirosevich_2008;@Keppel_and_Wickens_2004]. For example, @Koeser_and_Sczesny_2014 have compared arguments advocating either masculine generic or gender-fair language with control messages in order to test the impact of these conditions on the use of gender-fair wording (measured as a frequency). They report that the standard deviations increase after treatment in all experimental conditions.
+Third, even when the variances of groups are the same before treatment (due to a complete randomization in the group assignment), unequal variances can emerge later, as a consequence of an experimental treatment [@Bryk_and_Raudenbush_1988;@Cumming_2013; @Erceg-Hurn_Mirosevich_2008;@Keppel_and_Wickens_2004;@Box_1954]. For example, @Koeser_and_Sczesny_2014 have compared arguments advocating either masculine generic or gender-fair language with control messages in order to test the impact of these conditions on the use of gender-fair wording (measured as a frequency). They report that the standard deviations increase after treatment in all experimental conditions.
 
-Fourth, more often than not, psychological processes are captured in situations where many variables are unidentified and/or left uncontrolled [@Cohen_et_al_2013]. Since some of these variables can act as moderators, they can generate heteroscedasticity. To conclude, there are many common situations in which the homogeneity of variances assumption is unlikely to be true. Therefore, it is very useful to have statistical tools that do not rely on the equality of variances assumption when aiming to compare groups based on their means. 
+Fourth, more often than not, psychological processes are captured in situations where many variables are unidentified and/or left uncontrolled [@Cohen_et_al_2013]. Since some of these variables can act as moderators, they can generate heteroscedasticity.Indeed,  by definition, a moderator is a variable that will interact with factors, which implies that the effect of the moderator will be different in one condition of the factor than in another condition of the same factor.   
+
+To conclude, there are many common situations in which the homogeneity of variances assumption is unlikely to be true. 
 
 # The Mathematical Differences Between the *F*-test, *W*-test, and *F*\*-test
 
@@ -262,7 +270,7 @@ In sum, we provide five recommendations:
 
 1. Use the *W*-test instead of the *F*-test to compare groups means. The *F*-test and *F*\*-test should be avoided, because the equal variances assumption is often unrealistic, tests of the equal variances assumption will often fail to detect differences when these are present, the loss of power when using the *W*-test is very small (and often even negligible), and the gain in Type I error control is considerable under a wide range of realistic conditions.
 2. Do not neglect the descriptive analysis of the data. A complete description of the shape and characteristics of the data (e.g. histograms and boxplots) is important. When at least one statistical parameter relating to the shape of the distribution (e.g. variance, skewness, kurtosis) seems to vary between groups, comparing results of the *W*-test with results of a nonparametric procedure is useful in order to better understand the data. 
-3. Use the Shapiro-Wilk test to detect departures from normality (combined with graphical methods). Contrary to the Kolmogorov-Smirnov test, the Shapiro-Wilk test will almost always detect distributions with high skewness, even with very small sample sizes. With small sample sizes, the *W*-test will not control Type I error rate when skewness is present and detecting departures for normality is therefore especially important in small samples. When comparing at most four groups, the *W*-test should be avoided if the Shapiro-Wilk test reject the normality assumption, with less than 50 observations per group. When comparing more than four groups, the *W*-test should be avoided if the Shapiro-Wilk test rejects the normality assumption, with less than 100 subjects per group When normality cannot be assumed because of high kurtosis or high skewness, we recommend the use of alternative tests that are not based on means comparison, such as the trimmed means test \footnote{The null hypothesis of the trimmed means test assumes that trimmed means are the same between groups. A trimmed mean is a mean computed on data after removing the lowest and highest values of the distribution [@Erceg-Hurn_Mirosevich_2008]. Trimmed means and means are equal when data are symmetric. On the other hand, when data are asymmetric, trimmed means and means differ} or nonparametric tests. For more information, see @Erceg-Hurn_Mirosevich_2008.
+3. Use the Shapiro-Wilk test to detect departures from normality (combined with graphical methods). Contrary to the Kolmogorov-Smirnov test, the Shapiro-Wilk test will almost always detect distributions with high skewness, even with very small sample sizes. With small sample sizes, the *W*-test will not control Type I error rate when skewness is present and detecting departures for normality is therefore especially important in small samples. When comparing at most four groups, the *W*-test should be avoided if the Shapiro-Wilk test reject the normality assumption, with less than 50 observations per group. When comparing more than four groups, the *W*-test should be avoided if the Shapiro-Wilk test rejects the normality assumption, with less than 100 subjects per group When normality cannot be assumed because of high kurtosis or high skewness, we recommend the use of alternative tests that are not based on means comparison, such as the trimmed means test [@Erceg-Hurn_Mirosevich_2008] \footnote{The null hypothesis of the trimmed means test assumes that trimmed means are the same between groups. A trimmed mean is a mean computed on data after removing the lowest and highest values of the distribution . Trimmed means and means are equal when data are symmetric. On the other hand, when data are asymmetric, trimmed means and means differ.} or nonparametric tests. For more information, see @Erceg-Hurn_Mirosevich_2008.
 
 4. Perform a-priori power-analyses. Fifty subjects per group are generally enough to control the Type I error rate, but power analyses are still important in order to determine the required sample sizes to achieve sufficient power to detect a statistically significant difference [see @Albers_and_Lakens_2018]. 
 
